test_suite/tests/ui/conflict/internal-tag.stderr
error: variant field name `conflict` conflicts with internal tag
  --> $DIR/internal-tag.rs:4:1
   |
4  | / #[serde(tag = "conflict")]
5  | | enum E {
6  | |     A {
7  | |         #[serde(rename = "conflict")]
8  | |         x: (),
9  | |     },
10 | | }
   | |_^

error: aborting due to previous error

